--- a/Prueba2/app/src/main/AndroidManifest.xml
+++ b/Prueba2/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity
             android:name=".AcercaDeActivity"
-            android:label="Acerca de ..."></activity>
+            android:label="Acerca de ..."/>
     </application>
 
 </manifest>
