--- a/Bread4All/app/src/main/AndroidManifest.xml
+++ b/Bread4All/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity
             android:name=".InicioActivity"
             android:label="Inicio" />
+        <activity android:name=".ProductoActivity"/>
     </application>
 
 </manifest>
