--- a/Bread4All/app/src/main/AndroidManifest.xml
+++ b/Bread4All/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bread4all">
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -30,6 +30,7 @@
             android:name=".InicioActivity"
             android:label="Inicio" />
         <activity android:name=".ProductoActivity"/>
+        <activity android:name=".RecientesActivity"/>
     </application>
 
 </manifest>
