--- a/Fotografia/app/src/main/AndroidManifest.xml
+++ b/Fotografia/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:required="true"/>
     <queries>
         <intent>
-            <action android:name="android.intent.action.IMAGE_CAPTURE"/>
+            <action android:name="android.media.action.IMAGE_CAPTURE"/>
         </intent>
     </queries>
     <application
