--- a/Bread4All/app/build.gradle
+++ b/Bread4All/app/build.gradle
@@ -4,6 +4,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('C:\\Users\\b15-10m\\Documents\\almacenDam2.jks')
+            keyAlias 'keyDam2'
+            storePassword '16022000'
+            keyPassword '16022000'
+        }
+    }
     compileSdk 31
 
     defaultConfig {
@@ -35,6 +43,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
