--- a/CargaTresMapa/app/build.gradle
+++ b/CargaTresMapa/app/build.gradle
@@ -3,6 +3,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('C:\\Users\\b15-10m\\Documents\\almacenDam2.jks')
+            storePassword '16022000'
+            keyAlias 'keyDam2'
+            keyPassword '16022000'
+        }
+    }
     compileSdk 31
 
     defaultConfig {
