--- a/Bread4All/app/src/main/AndroidManifest.xml
+++ b/Bread4All/app/src/main/AndroidManifest.xml
@@ -49,7 +49,9 @@
         <activity android:name=".ProductoActivity"/>
         <activity android:name=".RecientesActivity"/>
         <activity android:name=".MapaActivity"/>
-
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
         <provider
             android:authorities="com.example.bread4all"
             android:name="androidx.core.content.FileProvider"
@@ -59,7 +61,6 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"/>
-
         </provider>
 
     </application>
